vocab route for grids
